[gd_scene load_steps=29 format=3 uid="uid://dkrx487vnxt77"]

[ext_resource type="Script" uid="uid://22lvfvsxrfin" path="res://scripts/cannon_pawn_new.gd" id="1_v3ajn"]
[ext_resource type="Texture2D" uid="uid://bvrbl74d3na2o" path="res://assets/new-sprites/gun.png" id="2_ibx8u"]
[ext_resource type="PackedScene" uid="uid://bvpy5vv8h2po" path="res://scenes/hitbox.tscn" id="2_xriqs"]
[ext_resource type="Texture2D" uid="uid://b56yntn7fmsw1" path="res://assets/new-sprites/cannon_pawn.png" id="3_ibx8u"]
[ext_resource type="PackedScene" uid="uid://bqj2of68myte6" path="res://scenes/hurtbox.tscn" id="3_v3ajn"]
[ext_resource type="Script" uid="uid://dovx0wh3tvcd6" path="res://scripts/CharacterStates/state_machine.gd" id="4_lysuj"]
[ext_resource type="Script" uid="uid://da4gykric308x" path="res://scripts/CharacterStates/enemy_states/pawn/cannon_pawn/idle.gd" id="6_mfhf1"]
[ext_resource type="Texture2D" uid="uid://by01wjyksj4kq" path="res://assets/new-sprites/bullet.png" id="7_lysuj"]
[ext_resource type="Script" uid="uid://b7ty1h02ccctp" path="res://scripts/CharacterStates/enemy_states/pawn/cannon_pawn/shoot.gd" id="8_ibx8u"]
[ext_resource type="PackedScene" uid="uid://dqy362l1svbkt" path="res://scenes/stun_effect.tscn" id="9_i4jr6"]
[ext_resource type="Script" uid="uid://dk6rj05rnro2b" path="res://scripts/CharacterStates/enemy_states/stun.gd" id="9_mfhf1"]
[ext_resource type="AudioStream" uid="uid://clxrayn8i32c" path="res://assets/sounds/pop.wav" id="12_cbmy1"]
[ext_resource type="AudioStream" uid="uid://cx3ge8o5y0s5r" path="res://assets/sounds/explode.wav" id="13_a1458"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1458"]
size = Vector2(20, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6i2o"]
atlas = ExtResource("2_ibx8u")
region = Rect2(0, 0, 20, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_wixdp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6i2o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibx8u"]
radius = 148.00151

[sub_resource type="AtlasTexture" id="AtlasTexture_cbmy1"]
atlas = ExtResource("3_ibx8u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mfhf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbmy1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfhf1"]
size = Vector2(28, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibx8u"]
size = Vector2(28, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbmy1"]
size = Vector2(28, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnp2u"]
atlas = ExtResource("7_lysuj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i4jr6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnp2u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mfhf1"]
radius = 3.0

[sub_resource type="Animation" id="Animation_0fhdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death/death_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_d6i2o"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death/death_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.96666664),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouc26"]
_data = {
&"RESET": SubResource("Animation_0fhdg"),
&"death": SubResource("Animation_d6i2o")
}

[node name="cannon_pawn_new" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(1, 0)
collision_layer = 2
script = ExtResource("1_v3ajn")
hp = 3
metadata/_custom_type_script = "uid://ceae8g8t1uin3"

[node name="position_markers" type="Node" parent="."]

[node name="left_cannon_pos" type="Node2D" parent="position_markers"]
position = Vector2(-3.6666665, -13.799999)
scale = Vector2(1.2, 1.2)

[node name="right_cannon_pos" type="Node2D" parent="position_markers"]
position = Vector2(6.9999986, -14)
scale = Vector2(1.2, 1.2)

[node name="gun" type="Area2D" parent="."]
position = Vector2(-4, -13.999998)
scale = Vector2(1.2, 1.2)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun"]
position = Vector2(-0.49999952, 0.05555725)
shape = SubResource("RectangleShape2D_a1458")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="gun"]
position = Vector2(-0.55555534, 0.16666603)
sprite_frames = SubResource("SpriteFrames_wixdp")

[node name="barrel_left" type="Node2D" parent="gun/AnimatedSprite2D"]
position = Vector2(-8.611112, -0.1666673)

[node name="barrel_right" type="Node2D" parent="gun/AnimatedSprite2D"]
position = Vector2(8.888887, -0.1666673)

[node name="sight" type="Area2D" parent="."]
collision_mask = 2

[node name="radius" type="CollisionShape2D" parent="sight"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_ibx8u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mfhf1")
animation = &"idle"

[node name="hitbox" parent="." instance=ExtResource("2_xriqs")]
visible = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_mfhf1")

[node name="hurtbox" parent="." instance=ExtResource("3_v3ajn")]
visible = false
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_ibx8u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_cbmy1")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("4_lysuj")
start_state = NodePath("idle")
metadata/_custom_type_script = "uid://dovx0wh3tvcd6"

[node name="idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("shoot_state", "stun_state")]
script = ExtResource("6_mfhf1")
shoot_state = NodePath("../shoot")
stun_state = NodePath("../stun")
anim_name = "idle"
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="shoot" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "stun_state")]
script = ExtResource("8_ibx8u")
idle_state = NodePath("../idle")
stun_state = NodePath("../stun")
bullet_speed = 150.0
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="delay" type="Timer" parent="StateMachine/shoot"]
one_shot = true

[node name="shoot_time" type="Timer" parent="StateMachine/shoot"]
wait_time = 3.0
one_shot = true

[node name="bullet" type="Area2D" parent="StateMachine/shoot"]
visible = false
position = Vector2(-14, -14)
scale = Vector2(1.2, 1.2)
collision_layer = 32
collision_mask = 68

[node name="bullet_sprite" type="AnimatedSprite2D" parent="StateMachine/shoot/bullet"]
position = Vector2(3.833334, -0.33333302)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i4jr6")

[node name="hitbox" type="CollisionShape2D" parent="StateMachine/shoot/bullet"]
position = Vector2(0.83333397, -0.33333302)
shape = SubResource("CircleShape2D_mfhf1")
disabled = true

[node name="stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("unstun_state")]
script = ExtResource("9_mfhf1")
unstun_state = NodePath("../idle")
metadata/_custom_type_script = "uid://d4lhjeo7o4pfj"

[node name="stun_time" type="Timer" parent="StateMachine/stun"]
wait_time = 3.0
one_shot = true

[node name="stun_effect" parent="." instance=ExtResource("9_i4jr6")]
visible = false
position = Vector2(0, 2)

[node name="hurt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_cbmy1")
volume_db = 4.0

[node name="death" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ouc26")
}

[node name="death_sound" type="AudioStreamPlayer2D" parent="death"]
scale = Vector2(1.5, 1.5)
stream = ExtResource("13_a1458")

[connection signal="body_entered" from="sight" to="StateMachine/shoot" method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="StateMachine/shoot" method="_on_sight_body_exited"]
[connection signal="area_entered" from="StateMachine/shoot/bullet" to="StateMachine/shoot" method="_on_bullet_area_entered"]
[connection signal="timeout" from="StateMachine/stun/stun_time" to="StateMachine/stun" method="_on_stun_time_timeout"]
